--- a/src/styles.scss
+++ b/src/styles.scss
@@ -218,3 +218,27 @@ label {
     height: 80px;
 
   }
+
+
+
+  .order-table {
+
+    thead th.ng2-smart-actions.ng-star-inserted {
+      width: 1em;
+    }
+  
+    td.ng2-smart-actions {
+      float: left !important;
+  
+      ng2-st-tbody-custom {
+        float: left;
+        width: auto;
+        display: flex;
+        margin-top: 0.5em;
+  
+        a.ng2-smart-action.ng2-smart-action-custom-custom {
+          margin-left: 0.5em;
+        }
+      }
+    }
+  }
