--- a/src/styles.scss
+++ b/src/styles.scss
@@ -226,6 +226,10 @@ label {
     thead th.ng2-smart-actions.ng-star-inserted {
       width: 1em;
     }
+    
+    thead tr.ng2-smart-filters.ng-star-inserted{
+        display:none;
+    }
   
     td.ng2-smart-actions {
       float: left !important;
@@ -242,3 +246,5 @@ label {
       }
     }
   }
+
+  
