--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,9 +227,9 @@ label {
       width: 1em;
     }
     
-    thead tr.ng2-smart-filters.ng-star-inserted{
+    /* thead tr.ng2-smart-filters.ng-star-inserted{
         display:none;
-    }
+    } */
   
     td.ng2-smart-actions {
       float: left !important;
