--- a/src/app/shared/nb-header/nb-header.component.html
+++ b/src/app/shared/nb-header/nb-header.component.html
@@ -19,13 +19,16 @@
       </nb-action>
       <nb-action class="control-item" icon="email-outline"></nb-action>
       <nb-action class="control-item" icon="bell-outline"></nb-action>
-     <!--  <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
+      <nb-action class="user-action">
         <nb-user [nbContextMenu]="userMenu"
+                 nbContextMenuTag="userMenu"
                  [onlyPicture]="userPictureOnly"
-                 [name]="user?.name"
-                 [picture]="user?.picture">
-        </nb-user>
-      </nb-action> -->
+                 [name]="'Sebastian Labadie'"
+                 [picture]="'https://bootdey.com/img/Content/avatar/avatar7.png'">
+        >
+      </nb-user>
+      </nb-action>
+       
     </nb-actions>
   </div>
   
