abm profile,brand,lines

--- a/src/app/provider/components/lista-provider/lista-provider.template.html
+++ b/src/app/provider/components/lista-provider/lista-provider.template.html
@@ -44,3 +44,9 @@
 
   
 </nb-card>
+
+<mat-paginator [length]="this.cantidadDeRegistros"
+  [pageSize]="this.pageSize"
+  [pageSizeOptions]="this.pageSizeOptions"
+  (page)="pageEvent($event)">
+</mat-paginator> 
