translate placeholders and validation errores

--- a/src/app/products/components/form-product/form-product.component.html
+++ b/src/app/products/components/form-product/form-product.component.html
@@ -22,8 +22,7 @@
               <label> {{'PRODUCTS.COLUMN_NAME' | translate }}</label>
               <input [readonly]="camposReadOnly==true" type="text" formControlName="name" class="form-control campo-descripcion-corta" [(ngModel)]="product.name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
               <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                  <div *ngIf="f.name.errors.required">{{'PRODUCTS.FORM_ERROR_NAME' | translate }}</div>
-                                  
+                  <div *ngIf="f.name.errors.required">{{'PRODUCTS.FORM_ERROR_NAME' | translate }}</div>              
               </div>
             </div>
           
@@ -32,24 +31,32 @@
             <input [readonly]="camposReadOnly==true" type="text" formControlName="description" class="form-control campo-descripcion-corta" [(ngModel)]="product.description" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
             <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
                 <div *ngIf="f.description.errors.required">{{'PRODUCTS.FORM_ERROR_DESCRIPTION' | translate }}</div>
-                
             </div>
           </div>
 
             <div class="form-group">
               <label>{{'PRODUCTS.COLUMN_EAN_CODE' | translate}}</label>
-              <input  [readonly]="camposReadOnly==true" class="form-control ng-untouched ng-pristine ng-valid campo-descripcion-corta" formControlName="eanCode" id="eanCode" [(ngModel)]="product.eanCode" />
+              <input  [readonly]="camposReadOnly==true" class="form-control ng-untouched ng-pristine ng-valid campo-descripcion-corta" formControlName="eanCode" id="eanCode" [(ngModel)]="product.eanCode" [ngClass]="{ 'is-invalid': submitted && f.eanCode.errors }" />
+              <div *ngIf="submitted && f.eanCode.errors" class="invalid-feedback">
+                <div *ngIf="f.eanCode.errors.required">{{'PRODUCTS.FORM_ERROR_EAN_CODE' | translate }}</div>
+              </div>
             </div>
   
             <div class="form-group">
               <label>{{'PRODUCTS.COLUMN_EXTERNAL_CODE' | translate}}</label>
-              <input  [readonly]="camposReadOnly==true" class="form-control ng-untouched ng-pristine ng-valid campo-descripcion-corta" formControlName="externalCode" id="externalCode" [(ngModel)]="product.externalCode" />
+              <input  [readonly]="camposReadOnly==true" class="form-control ng-untouched ng-pristine ng-valid campo-descripcion-corta" formControlName="externalCode" id="externalCode" [(ngModel)]="product.externalCode" [ngClass]="{ 'is-invalid': submitted && f.externalCode.errors }" />
+              <div *ngIf="submitted && f.externalCode.errors" class="invalid-feedback">
+                <div *ngIf="f.externalCode.errors.required">{{'PRODUCTS.FORM_ERROR_EXTERNAL_CODE' | translate }}</div>
+              </div>
             </div>
   
   
             <div class="form-group">
               <label for="id">{{'PRODUCTS.COLUMN_STORE_CODE' | translate}}</label>
-              <input  [readonly]="camposReadOnly==true" class="form-control ng-untouched ng-pristine ng-valid campo-descripcion-corta" formControlName="storeCode" id="storeCode" [(ngModel)]="product.storeCode" />
+              <input  [readonly]="camposReadOnly==true" class="form-control ng-untouched ng-pristine ng-valid campo-descripcion-corta" formControlName="storeCode" id="storeCode" [(ngModel)]="product.storeCode" [ngClass]="{ 'is-invalid': submitted && f.storeCode.errors }" />
+              <div *ngIf="submitted && f.storeCode.errors" class="invalid-feedback">
+                <div *ngIf="f.storeCode.errors.required">{{'PRODUCTS.FORM_ERROR_STORE_CODE' | translate }}</div>
+              </div>
             </div>
   
             
@@ -57,7 +64,7 @@
 
           <div class="right-side">
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Selecciona una categoria" [disabled]="camposReadOnly==true" formControlName="category" [(ngModel)]="product.category" [compareWith]="compareFn"  >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_CATEGORY' | translate" [disabled]="camposReadOnly==true" formControlName="category" [(ngModel)]="product.category" [compareWith]="compareFn"  >
                 <mat-option *ngFor="let category of categories" [value]="category">
                   {{category.name}}
                 </mat-option>
@@ -65,7 +72,7 @@
             </mat-form-field> 
          
             <mat-form-field  appearance="fill">
-              <mat-select placeholder="Selecciona una marca" [disabled]="camposReadOnly==true"formControlName="brand" [(ngModel)]="product.brand" [compareWith]="compareFn" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_BRAND' | translate" [disabled]="camposReadOnly==true"formControlName="brand" [(ngModel)]="product.brand" [compareWith]="compareFn" >
                 <mat-option *ngFor="let brand of brands" [value]="brand">
                   {{brand.name}}
                 </mat-option>
@@ -73,7 +80,7 @@
             </mat-form-field> 
 
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Selecciona una familia" [disabled]="camposReadOnly==true" formControlName="family" [(ngModel)]="product.family" [compareWith]="compareFn" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_FAMILY' | translate" [disabled]="camposReadOnly==true" formControlName="family" [(ngModel)]="product.family" [compareWith]="compareFn" >
                 <mat-option *ngFor="let family of families" [value]="family">
                   {{family.name}}
                 </mat-option>
@@ -81,7 +88,7 @@
             </mat-form-field> 
         
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Selecciona una linea" [disabled]="camposReadOnly==true" formControlName="line" [(ngModel)]="product.line" [compareWith]="compareFn" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_LINE' | translate" [disabled]="camposReadOnly==true" formControlName="line" [(ngModel)]="product.line" [compareWith]="compareFn" >
                 <mat-option *ngFor="let line of lines" [value]="line">
                   {{line.name}}
                 </mat-option>
@@ -89,7 +96,7 @@
             </mat-form-field> 
 
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Selecciona una variedad" [disabled]="camposReadOnly==true" formControlName="variety" [(ngModel)]="product.variety" [compareWith]="compareFn" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_VARIETY' | translate" [disabled]="camposReadOnly==true" formControlName="variety" [(ngModel)]="product.variety" [compareWith]="compareFn" >
                 <mat-option *ngFor="let variety of varieties" [value]="variety">
                   {{variety.name}}
                 </mat-option>
@@ -97,21 +104,21 @@
             </mat-form-field> 
 
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Selecciona un tipo" [disabled]="camposReadOnly==true" formControlName="productOrService" [(ngModel)]="product.productOrService" [compareWith]="compareFnBool" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_TYPE' | translate" [disabled]="camposReadOnly==true" formControlName="productOrService" [(ngModel)]="product.productOrService" [compareWith]="compareFnBool" >
                 <mat-option [value]="0">Product</mat-option>
                 <mat-option [value]="1">Service</mat-option>
               </mat-select>
             </mat-form-field> 
 
             <mat-form-field appearance="fill">
-              <mat-select placeholder="producto usa stock" [disabled]="camposReadOnly==true" formControlName="useStock" [(ngModel)]="product.useStock" [compareWith]="compareFnBool" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_STOCK' | translate" [disabled]="camposReadOnly==true" formControlName="useStock" [(ngModel)]="product.useStock" [compareWith]="compareFnBool" >
                 <mat-option [value]="true">Si</mat-option>
                 <mat-option [value]="false">No</mat-option>
               </mat-select>
             </mat-form-field> 
 
             <mat-form-field appearance="fill">
-              <mat-select placeholder="Selecciona un proveedor" [disabled]="camposReadOnly==true" formControlName="provider" [(ngModel)]="product.provider" multiple  [compareWith]="compareFn" >
+              <mat-select [placeholder]="'PRODUCTS.FORM_PLACE_HOLDER_PROVIDERS' | translate" [disabled]="camposReadOnly==true" formControlName="provider" [(ngModel)]="product.provider" multiple  [compareWith]="compareFn" >
                 <mat-option *ngFor="let provider of providers" [value]="provider">
                   {{provider.name}}
                 </mat-option>
