--- a/src/app/products/components/form-product/form-product.component.html
+++ b/src/app/products/components/form-product/form-product.component.html
@@ -3,8 +3,8 @@
     <div class="titulo-form">{{formTitle | translate}}</div>
     <form [formGroup]="ProductForm" (submit)="onSubmit()">
       <div class="controles-form">
-        <button *ngIf="this.insert" [hidden]="camposReadOnly==true" class="btn btn-primary boton-form" type="reset" >{{'PRODUCTS.RESET' | translate}}</button>
-        <button [hidden]="camposReadOnly==true" class="btn btn-primary boton-form" type="button" (click)="gotoList()">{{'PRODUCTS.CANCEL' | translate}}</button>
+        <button *ngIf="this.insert"  class="btn btn-primary boton-form" type="reset" >{{'PRODUCTS.RESET' | translate}}</button>
+        <button  class="btn btn-primary boton-form" type="button" (click)="gotoList()">{{'PRODUCTS.CANCEL' | translate}}</button>
         <button class="btn btn-primary boton-form" type = "submit" >{{'PRODUCTS.CONFIRM' | translate}}</button>
       </div>
 
