--- a/src/app/profile/components/form-profile/form-profile.component.html
+++ b/src/app/profile/components/form-profile/form-profile.component.html
@@ -3,8 +3,8 @@
     <div class="titulo-form">{{formTitle | translate}}</div>
     <form [formGroup]="ProfileForm" (submit)="onSubmit()">
       <div class="controles-form">
-        <button *ngIf="this.insert" [hidden]="camposReadOnly==true" class="btn btn-primary boton-form" type="reset" >{{'PROFILE.RESET' | translate}}</button>
-        <button [hidden]="camposReadOnly==true" class="btn btn-primary boton-form"  type="button" (click)="gotoList()">{{'PROFILE.CANCEL' | translate}}</button>
+        <button *ngIf="this.insert"  class="btn btn-primary boton-form" type="reset" >{{'PROFILE.RESET' | translate}}</button>
+        <button  class="btn btn-primary boton-form"  type="button" (click)="gotoList()">{{'PROFILE.CANCEL' | translate}}</button>
         <button class="btn btn-primary boton-form" type = "submit">{{'PROFILE.CONFIRM' | translate}}</button>
       </div>
 
