--- a/src/app/provider/components/form-provider/form-provider.component.html
+++ b/src/app/provider/components/form-provider/form-provider.component.html
@@ -3,8 +3,8 @@
     <div class="titulo-form">{{formTitle | translate}}</div>
     <form [formGroup]="ProviderForm" (submit)="onSubmit()">
       <div class="controles-form">
-        <button *ngIf="this.insert" [hidden]="camposReadOnly==true" class="btn btn-primary boton-form" type="reset" >{{'PROVIDER.RESET' | translate}}</button>
-        <button [hidden]="camposReadOnly==true" class="btn btn-primary boton-form"  type="button" (click)="gotoList()">{{'PROVIDER.CANCEL' | translate}}</button>
+        <button *ngIf="this.insert"  class="btn btn-primary boton-form" type="reset" >{{'PROVIDER.RESET' | translate}}</button>
+        <button  class="btn btn-primary boton-form"  type="button" (click)="gotoList()">{{'PROVIDER.CANCEL' | translate}}</button>
         <button class="btn btn-primary boton-form" type = "submit">{{'PROVIDER.CONFIRM' | translate}}</button>
       </div>
 
