--- a/src/app/navigation/componentes-hijos/products-modal/products-modal.component.html
+++ b/src/app/navigation/componentes-hijos/products-modal/products-modal.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title> Products Modal</h1>
-<div mat-dialog-content>
+<div mat-dialog-content class="dialog-content">
 
     <!------------------ COMBO BOXES ------------------>
     <div class="combo-boxes-container">
