--- a/src/app/navigation/componentes-hijos/products-modal/products-modal.component.scss
+++ b/src/app/navigation/componentes-hijos/products-modal/products-modal.component.scss
@@ -1,25 +1,51 @@
 :host{
-    .combo-boxes-container,.inputs-container{
-        display: flex;
-        flex-wrap: wrap;
-    }
     .combo-boxes-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,240px);
         justify-content: space-between;
         align-items: center;
+        grid-gap: 20px;
+    }
+    .inputs-container{
+        display: flex;
+        flex-wrap: wrap;
     }
     table,.table-container{
         width: 100%;
         overflow-x: auto;
     }
-    .mat-form-field-infix{
         
-    }
-
-   /*  .combo-boxes-container{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        justify-content: space-between;
-        align-items: center;
-        grid-gap: 20px;
-    } */
+    
 }
+
+@media (max-width:1024px){
+    
+    :host{
+        .combo-boxes-container{
+            grid-template-columns: repeat(auto-fit,185px);
+            grid-gap: 10px;
+        }
+    }
+}
+
+@media (max-width:768px){
+    
+    :host{
+        .combo-boxes-container{
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 10px;
+        }
+    }
+}
+
+@media (max-width:576px){
+    
+    :host{
+        .combo-boxes-container{
+            grid-template-columns: 1fr;
+            grid-gap: 10px;
+        }
+    }
+}
+
+
