--- a/src/app/movements/components/form-user/form-movement.scss
+++ b/src/app/movements/components/form-user/form-movement.scss
@@ -16,7 +16,9 @@
     }
 
 }
-
+ng2-smart-filters{
+    display: none;
+}
 @media screen and (max-width: 768px) {
     :host{
         .form-container{
